--- a/lectures/8.22.2023.md
+++ b/lectures/8.22.2023.md
@@ -1,3 +1,19 @@
-### Second lecture
+### BINF200 : Bioinformatics!
 
-Was just basic biology stuff i already know
+# Perhaps i gotta do some BINF100 catching up?
+
+Monday  10:15 - 12:00
+Tuesday 10:15 - 12:00
+
+3 Assignments 30%
+Exam 70%
+
+# Bioinformatics and func. genomics by pevsner
+
+BINF200 in mails.
+
+# TODO:
+
+pairwise seq. alignment
+
+
