--- a/lectures/8.29.2023.md
+++ b/lectures/8.29.2023.md
@@ -1,4 +1,123 @@
-#### Lecture 4
+# Lecture 4
 
 ## 1 Biological databases
+***we use db to find sequences***
+
+given a query sequence, go to database and find matching or similar 
+
+examples:
+- nucleic acid research 
+- genbank
+- uniprot --> tells us important stuff about proteins
+
+DB search is tricky
+
+
+## 2 BLAST
+
+Simplified SW - alignment fast and easy to access
+Estimates only part of the search space
+BLAST restricsts search by a quick inital scan, before doing more intense alignments
+BLAST is not gauranteed!!
+
+- algorithm
+Make a list of query word pairs
+
+Expand word pairs -> create similar words to the query words
+
+DB is scanned to find seq entries that match compiled word list
+
+![blast sequence](images/blast_seq.png)
+
+
+example:
+
+1. Setup grams
+
+q: ACGTAC
+
+2-grams: AC, CG, GT, TA , AC
+
+similarity matrix alphabet:
+
+  A   C   G   T
+A 2  -2   1  -2
+C     2  -2  1
+G         2  -2
+T            2
+
+Match is 2 points, mismatch points varies 
+some mismatch are worse
+
+2. Score segment pairs and matching n-grams
+
+
+N-gram Matching    Score
+AC      AA          = 0
+AC      AC          = 4
+etc...
+
+Good score = correct alignment
+
+There is a threshold score, example 3
+
+Then we only want the matching ones
+
+N-gram   Match   Scores
+AC     AC,AT,GC  4,3,3
+
+Repeat for all N-grams
+
+3. Create lookup table
+
+N-gram-match  Indicies of Q    Score
+AC                  1,5         4,4 
+GC                  1,3,5       3,3,3
+
+^This GC tells us that we can have a GC where our query has an AC, but it will only have 3, not 4
+AC in index 1 is a max score of 4! Very good 
+
+4. Scan DB, to find matching that reaches across threshold
+
+AAAGTG
+
+GT index 3, score 4
+TG index 2,4 score 3,3
+
+Potential GT match at index 3
+Potential TG match at index 2 and 4
+
+ AAAGTG
+AAATGG
+  AAATGG
+
+5. We are going to have a lot of possible matches! --> 
+
+If we already have an identical hit then yippi
+
+else,
+
+find similar regions and prioritize regions with matches which are close genetically, increase their score, 
+and decrease score of regions with less matches
+
+
+### When we add a new sequence?
+We also add its n-grams
+
+CTGA is added
+then 
+1. CT
+2. TG
+
+is also stored, so that you dont need to process these things a million times
+the indexes will always be the same
+
+so we bascially go right to step 3
+
+
+
+- statistics
+- output
+
+
 
