--- a/lectures/8.29.2023.md
+++ b/lectures/8.29.2023.md
@@ -32,7 +32,10 @@ DB is scanned to find seq entries that match compiled word list
 
 example:
 
-1. Setup grams
+1. ## Setup grams
+
+
+
 
 q: ACGTAC
 
@@ -49,7 +52,9 @@ T            2
 Match is 2 points, mismatch points varies 
 some mismatch are worse
 
-2. Score segment pairs and matching n-grams
+2. ## Score segment pairs and matching n-grams
+
+
 
 
 N-gram Matching    Score
@@ -68,7 +73,10 @@ AC     AC,AT,GC  4,3,3
 
 Repeat for all N-grams
 
-3. Create lookup table
+3. ## Create lookup table
+
+
+
 
 N-gram-match  Indicies of Q    Score
 AC                  1,5         4,4 
@@ -77,7 +85,10 @@ GC                  1,3,5       3,3,3
 ^This GC tells us that we can have a GC where our query has an AC, but it will only have 3, not 4
 AC in index 1 is a max score of 4! Very good 
 
-4. Scan DB, to find matching that reaches across threshold
+4. ## Scan DB, to find matching that reaches across threshold
+
+
+
 
 AAAGTG
 
@@ -91,7 +102,10 @@ Potential TG match at index 2 and 4
 AAATGG
   AAATGG
 
-5. We are going to have a lot of possible matches! --> 
+5. ## We are going to have a lot of possible matches! --> 
+
+
+
 
 If we already have an identical hit then yippi
 
@@ -102,6 +116,7 @@ and decrease score of regions with less matches
 
 
 ### When we add a new sequence?
+
 We also add its n-grams
 
 CTGA is added
