end of lesson 4

--- a/lectures/8.29.2023.md
+++ b/lectures/8.29.2023.md
@@ -30,7 +30,7 @@ DB is scanned to find seq entries that match compiled word list
 ![blast sequence](images/blast_seq.png)
 
 
-example:
+# Algorithm
 
 1. ## Setup grams
 
@@ -105,14 +105,54 @@ AAATGG
 5. ## We are going to have a lot of possible matches! --> 
 
 
-
-
 If we already have an identical hit then yippi
 
 else,
 
 find similar regions and prioritize regions with matches which are close genetically, increase their score, 
 and decrease score of regions with less matches
+
+If regions match close, extend matching regions slightly
+
+Go left and right to add positive alignment!
+
+D P P Q G L F
+D P **P E** G V V
+
+Score -2 **7 7 2 6 1** -1
+
+Score good when a little to left or right
+But too far out, negative scores
+
+## Phase 4 of blast:
+
+Initial db hits are extended in both directions using dynamic programming
+# TODO: UNDERSTAND THIS
+
+Example:
+
+query: AAAT
+db:
+
+fill in score matrix
+# TODO: UNDERSTAND THIS
+
+![blast sequence](images/blase_phase4.png)
+
+**Too much right or down, more gaps (we dont care about gaps)**
+
+So cut off slightly right and down (n-steps) 
+
+We dont gotta fill in the enitre matrix
+
+
+
+## BLAST sequence alignment explained simply
+- make n-grams of query string (usually 2)
+- exploit matches
+- expand clusters of matches to add to score
+- do local alignment, with limitations
+- give answers and provide a confidence level
 
 
 ### When we add a new sequence?
@@ -131,8 +171,88 @@ so we bascially go right to step 3
 
 
 
-- statistics
-- output
+# Statistics
+
+**E-value is the expected numbers of hits, as good or better than observed, if db and query is random**
+
+Blast will never say it didnt find anything!
+
+Compare the found score to a random sequence's score
+
+In an ideal world, related sequences and unrelated sequences have a vastly different alignments score
+
+![score](images/align_score.png)
+
+Example:
+*Real seq*
+Len 10
+a:2
+c:3
+t:1
+g:4
+
+Now make a random seq with the same length and same number of a,c,t,g
+Then align it and show the align. score
+
+Hopefully the random seq. lines up as the graph shown above, and does not match.
+
+That means the E value should be 0, for the REAL query
+E value increases as you tend towards random sequences.
+
+*E value is how many hits with this kind of score "score meaning align. score"*
+
+And if sequence is more random, lower score, higher chance of other random seq reaching random score
+
+E value depends on a lot of factors, there is a formula for it. 
+
+***but....***
+
+![score](images/align_score_oops.png)
+
+Score may be kind mixed hehe, sometimes a query is actually decently likely to be a random seq!
+
+**Example**
+very short sequences can result in real alignments being hard to tell from random
+
+
+## Alignment matrix
+
+given scoring matrix, what is the score, but we have different hits
+
+Max indent describes sequences that are not quite the same length, even if the score is just as good
+
+
+**S**
+Different alignment matrixes??? due to different lengths in sequences
+scores can be scaled 
+graph can be approximated
+
+
+**K**
+*remember...!* If DB has more sequences, more chance of a random hit! 
+
+Different DB sizes will widen or shorten chance to find alignment only by chance
+
+If DB size = infinite, then any sequence is likely to find an alignment
+
+BLAST takes this into account by producing BIT scores and E values
+
+### Max score
+
+example max score = 677 
+if db with 2^677 entries
+then ???
+
+but max score doesnt depend on the specific query, just query size, not proteins specfically
+
+can be compared across several DB sequences
+
+
+### Blast
+
+Blast just knows without computing ??? cool
+
+
 
 
 
