--- a/lectures/9.4.2023.md
+++ b/lectures/9.4.2023.md
@@ -7,16 +7,16 @@ nex-generation seq
 
 ## Origins of dna seq
 
-**why**
+### why
 - medicine ->  genetic variation/rare disease/viruses
 - biology genotype to phenotype
 - crops 
 
-**sanger**
+### sanger
 - sanger guy was first dude to do dna seq
 - used chain termingating inhibs (sanger seq)
 
-**how do we do sang sequencing**
+### how do we do sang sequencing
 - uses automated seq machines
 1. dna is fragmented
 2. dna polymrase amplified
@@ -26,7 +26,7 @@ nex-generation seq
 
 ## NGS is new and cool, millions of sequences
 
-**illumina method**
+### illumina method
 
 - several lanes
 - bind to flow cell
@@ -39,7 +39,7 @@ nex-generation seq
 accurate, fast, robust
 *but...* cant read more than 150bp
 
-**pacbio sequence**
+### pacbio sequence
 - single molecule real time sequencing (SMRT)
 
 up to 70kb
@@ -49,7 +49,7 @@ high error rate (compared to the rest)
 high cost
 no amplifications so need a lot of input material
 
-**nanopore seq**
+### nanopore seq
 
 - dna helix is unwound
 - dna is fed thru a pore
@@ -57,7 +57,7 @@ no amplifications so need a lot of input material
 - when the dna goes thru, electric charge changes
 - change measured and relates to a specific sequence
 
-**ngs important stuff**
+### ngs important stuff
 
 read length
 errors
@@ -66,39 +66,40 @@ cost
 turnaround time
 multiplexing?
 
-**read length**
+### read length
 illumina 150kb
 pacbio minION 50kb
 
 short are good for re-sequencing
 longer reads, LTR, chromosomal reargments
 
-**errors**
+### errors
 - there is a lot of error percents
 - nanopore is error prone
 - illumina is pretty good
 - error correcting is a thing
 
-**multiplexing**
+### multiplexing
 
 using an illumina flowcell, can create a barcode
 
-**refrence genome**
+### refrence genome
 what would we expect from a genome, can map from it
 
 
 ## RNA
 
-**Transciprtome**
+### Transciprtome
 - represents all the RNA expressed
 - genomes are stable, but transcriptome changes
 - transciprtome is linked to which genes which are expressed
 
-**why rna**
+### why rna
 - medicine -> gene expression, tumors, disease linked to rna
 - biology -> gene expression linked to cell type, embryonic development etc
 
-### test
-hey
+### mRNA transcription
 
+- exon is whats important
+- introns is not transcribed 
 
