--- a/lectures/9.4.2023.md
+++ b/lectures/9.4.2023.md
@@ -102,4 +102,106 @@ what would we expect from a genome, can map from it
 
 - exon is whats important
 - introns is not transcribed 
+- makes mRNA differ
 
+## Rna-seq pipeline
+
+- rna-seq is not actually sequencing rna, but cDNA from the RNA template
+- reverse transcribed!
+- reads are mapped to refrence genome
+- *but...* we also wan to quantify, not just map
+
+## FASTQ format
+
+sequence id
+base calls
+seperator
+quality score (q = quality, p = % base is wrong) (Q = -10log_10(p))
+
+**example**
+
+@SIM:1:FCX:1:15:6329:1045 1:N:0:2
+ATGTAGTAGTG
++
+<>;###
+
+
+## What to do now
+
+all samples have uniform dis. of reads = happy
+*but...* 
+samples will have different num. of reads
+
+1. ## quality check the dataa
+tidy up sequencing
+
+use **FastQC** for this stuff
+- quality control
+- graphs/tables
+- spits out html
+
+use **trimmomatic** for adapter trimming
+- adapter sequences are on the dna, and we want it gone
+- remove other artifcats
+- CLI to trim/crop illumina
+- remove adapters
+- works with paired/single ended reads (forward/reverse strand)
+- fastq can be huge so compressed/decompressed
+
+use **kraken** also its quality/trimming
+- read many files at once
+- uses PERL
+
+### map to refrence genome
+- rna seq is mapped to refrence
+- FASTA files
+- GTF files include genomic features, intron/exon
+- example refrence genome is A FASTA file
+
+### GTF
+example:
+
+1       havana  gene    11869   14409   .       +       .       gene_id "ENSG00000223972"; gene_version "5"; gene_name "DDX11L1"; gene_source "havana"; gene_biotype "transcribed_unprocessed_pseudogene";
+1       havana  transcript      11869   14409   .       +       .       gene_id "ENSG00000223972"; gene_version "5"; transcript_id "ENST00000456328"; transcript_version "2"; gene_name "DDX11L1"; gene_source "havana"; gene_biotype "transcribed_unprocessed_pseudogene"; transcript_name "DDX11L1-202"; transcript_source "havana"; transcript_biotype "processed_transcript"; tag "basic"; transcript_support_level "1";
+1       havana  exon    11869   12227   .       +       .       gene_id "ENSG00000223972"; gene_version "5"; transcript_id "ENST00000456328"; transcript_version "2"; exon_number "1"; gene_name "DDX11L1"; gene_source "havana"; gene_biotype "transcribed_unprocessed_pseudogene"; transcript_name "DDX11L1-202"; transcript_source "havana"; transcript_biotype "processed_transcript"; exon_id "ENSE00002234944"; exon_version "1"; tag "basic"; transcript_support_level "1";
+
+lots of info!
+Info -> seq,source,feature,start,end,score,strand,frame,attribute
+
+2. ## alignment 
+
+Take all of FASTQ and fit them together
+
+**STAR**
+
+setup to align RNA reads to correct gene
+
+get our reads, get our refrence genome
+map this stuff!
+
+*Mapping vs genome assembly*
+with no refrence genome to map to, use genome assembly
+
+### Star
+- genome generation and mapping
+- outputs sam/bam files and mapping reports
+- sam is readble, bam is not
+
+
+3. ## quanitfy alignment and downstream differences
+
+**How much rna do we have? (abundance)**
+
+fragments per kilobase per million
+transcripts per million
+
+**HTseq** is good at this using BAM/SAM and GTF
+outputs a table of gene id's and counts
+
+Ok cool now we know this but what now?
+
+### Uses
+- gene expression in sick people/vs control
+- up/down regulation
+- volcano plot can visualize gene clusters
+- gene ontology enrichment (is a gene enriched for specific purpose?)
