halway thru lecture 6

--- a/lectures/9.5.2023.md
+++ b/lectures/9.5.2023.md
@@ -55,8 +55,32 @@ uses **PCR**
 
 ### Short read vs long read RNA-seq
 
-short : 20-100bp -> re-assemble (useless for this)
-long  : 
+short : 20-100bp 
+- re-assemble (useless for this)
+
+long : 10kbp (10000 bp)
+-entire dna/rna
+
+VSG dna is 1400-200bp
+
+### CCS
+CCS = Circular consensus sequence
+
+put loops of dna on the end of the DNA
+
+anneal primers and bind dna polymerase
+
+keeps going around and around, making copies of the dna
+
+![ccs](images/ccs_image.png)
+
+
+when it goes around, 10% of dna may be wrong (it made a mistake)
+mistakes vary... but low chance to make same mistakes many times
+so after many copies, "vote" on the most common
+
+
+
 
 
 
