--- a/lectures/9.5.2023.md
+++ b/lectures/9.5.2023.md
@@ -1,6 +1,7 @@
 # Lecture 6
 
 **Assignment 1 due 15th september!**
+**I am group 15 which means balbc_10_5**
 
 ## Background
 
@@ -79,7 +80,26 @@ when it goes around, 10% of dna may be wrong (it made a mistake)
 mistakes vary... but low chance to make same mistakes many times
 so after many copies, "vote" on the most common
 
+## We wanna
 
+Count how many different of these genes
+
+use BLAST to align data seq to a DB of known VGS genes
+
+Less than 20% alignment -> throw away
+
+ORF -> Open Reading Frame
+
+ORF is the area on RNA between **start** and **stop** codon
+ORF varies from where you choose to start
+
+AUGCAUCGUAGCUGAUGCAU
+can start from
+AUG
+ UGC
+  GCA
+
+so there are three possible ways of finding an open reading frame! :bulb:
 
 
 
