Issues with dividing

--- a/assignments/assignment1.ipynb
+++ b/assignments/assignment1.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -181,18 +181,18 @@
       "19288   balbc_10_5/163466/ccs5   Tb09.v4.0088  1284  2372.0  0.0  1447  1317   \n",
       "19289   balbc_10_5/163473/ccs2   Tb10.v4.0065  1295  2392.0  0.0  1731  1500   \n",
       "\n",
-      "          7  8     9    10   11  12    13    coverage  \n",
-      "0      1271  1  1266  1109  125  37  1109   81.947131  \n",
-      "1      1285  1  1266  1123  130  32  1123   82.849774  \n",
-      "2      1274  1  1266  1126  127  21  1126   82.140554  \n",
-      "3      1292  1  1266  1123  132  37  1123   83.301096  \n",
-      "4      1483  1  1458  1428   21  34  1428  100.884354  \n",
-      "...     ... ..   ...   ...  ...  ..   ...         ...  \n",
-      "19285  1317  1  1317  1316    1   0  1316  100.000000  \n",
-      "19286  1384  1  1377  1373    0  11  1373  100.508351  \n",
-      "19287  1271  1  1266  1118  125  28  1118   81.947131  \n",
-      "19288  1324  1  1317  1312    5   7  1312  100.531511  \n",
-      "19289  1566  3  1500  1488    5  73  1488  104.400000  \n",
+      "          7  8     9    10   11  12    13                            coverage  \n",
+      "0      1271  1  1266  1109  125  37  1109   81.947130883301099402160616591573  \n",
+      "1      1285  1  1266  1123  130  32  1123   82.849774339136033063368813600391  \n",
+      "2      1274  1  1266  1126  127  21  1126   82.140554480980014773194852750748  \n",
+      "3      1292  1  1266  1123  132  37  1123   83.301096067053521210254984907806  \n",
+      "4      1483  1  1458  1428   21  34  1428  100.884353741496596512661199085414  \n",
+      "...     ... ..   ...   ...  ...  ..   ...                                 ...  \n",
+      "19285  1317  1  1317  1316    1   0  1316  100.000000000000000000000000000000  \n",
+      "19286  1384  1  1377  1373    0  11  1373  100.508351488743642221379559487104  \n",
+      "19287  1271  1  1266  1118  125  28  1118   81.947130883301099402160616591573  \n",
+      "19288  1324  1  1317  1312    5   7  1312  100.531511009870925477116543333977  \n",
+      "19289  1566  3  1500  1488    5  73  1488  104.400000000000005684341886080801  \n",
       "\n",
       "[19290 rows x 15 columns]\n"
      ]
@@ -203,14 +203,16 @@
     "# by the alignment. Compute the alignment coverage for all sequences from the BLAST\n",
     "# output.\n",
     "\n",
+    "\n",
     "df['coverage'] = np.divide(df[7],df[6])*100\n",
+    "\n",
     "\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -254,18 +256,31 @@
       "19288   balbc_10_5/163466/ccs5   Tb09.v4.0088  1284.0  2372.0  0.0  1447.0   \n",
       "19289   balbc_10_5/163473/ccs2   Tb10.v4.0065  1295.0  2392.0  0.0  1731.0   \n",
       "\n",
-      "            6       7    8       9      10     11    12      13    coverage  \n",
-      "0      1551.0  1271.0  1.0  1266.0  1109.0  125.0  37.0  1109.0   81.947131  \n",
-      "1      1551.0  1285.0  1.0  1266.0  1123.0  130.0  32.0  1123.0   82.849774  \n",
-      "2      1551.0  1274.0  1.0  1266.0  1126.0  127.0  21.0  1126.0   82.140554  \n",
-      "3      1551.0  1292.0  1.0  1266.0  1123.0  132.0  37.0  1123.0   83.301096  \n",
-      "4      1470.0  1483.0  1.0  1458.0  1428.0   21.0  34.0  1428.0  100.884354  \n",
-      "...       ...     ...  ...     ...     ...    ...   ...     ...         ...  \n",
-      "19285  1317.0  1317.0  1.0  1317.0  1316.0    1.0   0.0  1316.0  100.000000  \n",
-      "19286  1377.0  1384.0  1.0  1377.0  1373.0    0.0  11.0  1373.0  100.508351  \n",
-      "19287  1551.0  1271.0  1.0  1266.0  1118.0  125.0  28.0  1118.0   81.947131  \n",
-      "19288  1317.0  1324.0  1.0  1317.0  1312.0    5.0   7.0  1312.0  100.531511  \n",
-      "19289  1500.0  1566.0  3.0  1500.0  1488.0    5.0  73.0  1488.0  104.400000  \n",
+      "            6       7    8       9      10     11    12      13  \\\n",
+      "0      1551.0  1271.0  1.0  1266.0  1109.0  125.0  37.0  1109.0   \n",
+      "1      1551.0  1285.0  1.0  1266.0  1123.0  130.0  32.0  1123.0   \n",
+      "2      1551.0  1274.0  1.0  1266.0  1126.0  127.0  21.0  1126.0   \n",
+      "3      1551.0  1292.0  1.0  1266.0  1123.0  132.0  37.0  1123.0   \n",
+      "4      1470.0  1483.0  1.0  1458.0  1428.0   21.0  34.0  1428.0   \n",
+      "...       ...     ...  ...     ...     ...    ...   ...     ...   \n",
+      "19285  1317.0  1317.0  1.0  1317.0  1316.0    1.0   0.0  1316.0   \n",
+      "19286  1377.0  1384.0  1.0  1377.0  1373.0    0.0  11.0  1373.0   \n",
+      "19287  1551.0  1271.0  1.0  1266.0  1118.0  125.0  28.0  1118.0   \n",
+      "19288  1317.0  1324.0  1.0  1317.0  1312.0    5.0   7.0  1312.0   \n",
+      "19289  1500.0  1566.0  3.0  1500.0  1488.0    5.0  73.0  1488.0   \n",
+      "\n",
+      "                                 coverage  \n",
+      "0       81.947130883301099402160616591573  \n",
+      "1       82.849774339136033063368813600391  \n",
+      "2       82.140554480980014773194852750748  \n",
+      "3       83.301096067053521210254984907806  \n",
+      "4      100.884353741496596512661199085414  \n",
+      "...                                   ...  \n",
+      "19285  100.000000000000000000000000000000  \n",
+      "19286  100.508351488743642221379559487104  \n",
+      "19287   81.947130883301099402160616591573  \n",
+      "19288  100.531511009870925477116543333977  \n",
+      "19289  104.400000000000005684341886080801  \n",
       "\n",
       "[19290 rows x 15 columns]\n"
      ]
@@ -284,93 +299,98 @@
    "source": [
     "# 4. Remove alignments with coverage less than 60% \n",
     "\n",
+    "\n",
     "df_60 = df.where(df[\"coverage\"] >= 60)\n",
     "print(df_60)\n",
     "\n",
-    "plt.plot(df.index,df_60[\"coverage\"])\n",
+    "plt.plot(df_60.index,df_60[\"coverage\"])\n",
     "plt.show()  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "balbc_10_5/9516/ccs6\n",
-      "balbc_10_5/13602/ccs6\n",
-      "balbc_10_5/14641/ccs6\n",
-      "balbc_10_5/16037/ccs9\n",
-      "balbc_10_5/18004/ccs6\n",
-      "balbc_10_5/19035/ccs10\n",
-      "balbc_10_5/20140/ccs5\n",
-      "balbc_10_5/28760/ccs7\n",
-      "balbc_10_5/32103/ccs10\n",
-      "balbc_10_5/32103/ccs10\n",
-      "balbc_10_5/32166/ccs12\n",
-      "balbc_10_5/34766/ccs5\n",
-      "balbc_10_5/37601/ccs3\n",
-      "balbc_10_5/40970/ccs10\n",
-      "balbc_10_5/41846/ccs2\n",
-      "balbc_10_5/54403/ccs4\n",
-      "balbc_10_5/59393/ccs5\n",
-      "balbc_10_5/60328/ccs4\n",
-      "balbc_10_5/60535/ccs6\n",
-      "balbc_10_5/68366/ccs5\n",
-      "balbc_10_5/69323/ccs5\n",
-      "balbc_10_5/72270/ccs9\n",
-      "balbc_10_5/76548/ccs8\n",
-      "balbc_10_5/80022/ccs4\n",
-      "balbc_10_5/80563/ccs3\n",
-      "balbc_10_5/83251/ccs3\n",
-      "balbc_10_5/86432/ccs2\n",
-      "balbc_10_5/91958/ccs4\n",
-      "balbc_10_5/93061/ccs2\n",
-      "balbc_10_5/93915/ccs7\n",
-      "balbc_10_5/96139/ccs5\n",
-      "balbc_10_5/96344/ccs7\n",
-      "balbc_10_5/98370/ccs2\n",
-      "balbc_10_5/104474/ccs10\n",
-      "balbc_10_5/106134/ccs7\n",
-      "balbc_10_5/113071/ccs5\n",
-      "balbc_10_5/122597/ccs6\n",
-      "balbc_10_5/123126/ccs2\n",
-      "balbc_10_5/127055/ccs8\n",
-      "balbc_10_5/127942/ccs4\n",
-      "balbc_10_5/128503/ccs6\n",
-      "balbc_10_5/129106/ccs9\n",
-      "balbc_10_5/131579/ccs4\n",
-      "balbc_10_5/131708/ccs5\n",
-      "balbc_10_5/133333/ccs4\n",
-      "balbc_10_5/134321/ccs5\n",
-      "balbc_10_5/136567/ccs12\n",
-      "balbc_10_5/144108/ccs4\n",
-      "balbc_10_5/144855/ccs9\n",
-      "balbc_10_5/147343/ccs4\n"
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "duplicate amounts = 58\n"
      ]
     }
    ],
    "source": [
     "#verify that each query sequence is now aligned to at most one subject sequence.\n",
-    "\n",
+    "i = 0\n",
     "unique_list = []\n",
-    "for seq in df[0]:\n",
+    "for seq in df_60[0]:\n",
     "    if seq in unique_list:\n",
-    "        print(seq)\n",
+    "        print(str(seq))\n",
+    "        i+=1\n",
+    "        \n",
     "    else:\n",
-    "        unique_list.append(seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Bit score"
+    "        unique_list.append(seq)\n",
+    "\n",
+    "print(f\"duplicate amounts = {i}\")"
    ]
   }
  ],
