assignment 1 almost finished, 2 TODO's

--- a/assignments/assignment1.ipynb
+++ b/assignments/assignment1.ipynb
@@ -41,7 +41,11 @@
     "\n",
     "**5.2 Paragraph answer:**\n",
     "\n",
-    "Using mice that were infected with *Trypanosoma brucei*\n",
+    "Using mice that were infected with *Trypanosoma brucei*, PacBio long-read-sequencing was done on VSG amplicons that were extraced from mice at 3,6,19 and 12 days after infection. \n",
+    "\n",
+    "PacBio_VSG_filtered_reads_sample_name.fasta contains the dna sequences of VGS's found in a mice at a specfic time. #TODO \n",
+    "\n",
+    "The TREU927-v26_VSGTranscripts database contains a database of known VGS dna sequences.\n",
     "\n",
     "\n",
     "\n",
@@ -607,7 +611,7 @@
     "\"\"\"Surprisingly, only 33,234 reads (11%) resulted in predicted ORFs.\n",
     "we hypothesize that the lack of identified ORFs was due to random sequencing errors rather than any systematic biases in the data, despite PacBio claiming an accuracy of more than 99% for reads with 15-fold coverage\"\"\"\n",
     "\n",
-    "That is a lot of random sequencing errors! But i suppose it could be possible? I got even 2.9 % which is super low!! "
+    "That is a lot of random sequencing errors! But i suppose it could be possible? I got even 2.9 % which is super low!!  #TODO "
    ]
   }
  ],
