--- a/assignments/assignment1.ipynb
+++ b/assignments/assignment1.ipynb
@@ -534,16 +534,16 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.patches.Wedge at 0x7f6739b58220>,\n",
-       "  <matplotlib.patches.Wedge at 0x7f6739b0aef0>,\n",
-       "  <matplotlib.patches.Wedge at 0x7f6739b589d0>,\n",
-       "  <matplotlib.patches.Wedge at 0x7f6739b58e50>,\n",
-       "  <matplotlib.patches.Wedge at 0x7f6739b592d0>,\n",
-       "  <matplotlib.patches.Wedge at 0x7f6739b59750>,\n",
-       "  <matplotlib.patches.Wedge at 0x7f6739b59bd0>,\n",
-       "  <matplotlib.patches.Wedge at 0x7f6739b5a050>,\n",
-       "  <matplotlib.patches.Wedge at 0x7f6739b5a4d0>,\n",
-       "  <matplotlib.patches.Wedge at 0x7f6739b5a950>],\n",
+       "([<matplotlib.patches.Wedge at 0x7f225c960430>,\n",
+       "  <matplotlib.patches.Wedge at 0x7f225c912f20>,\n",
+       "  <matplotlib.patches.Wedge at 0x7f225c960ac0>,\n",
+       "  <matplotlib.patches.Wedge at 0x7f225c960f40>,\n",
+       "  <matplotlib.patches.Wedge at 0x7f225c9613c0>,\n",
+       "  <matplotlib.patches.Wedge at 0x7f225c961840>,\n",
+       "  <matplotlib.patches.Wedge at 0x7f225c961cc0>,\n",
+       "  <matplotlib.patches.Wedge at 0x7f225c962140>,\n",
+       "  <matplotlib.patches.Wedge at 0x7f225c9625c0>,\n",
+       "  <matplotlib.patches.Wedge at 0x7f225c962a40>],\n",
        " [Text(-0.5841800189986275, 0.9320588529716155, 'Tb08.27P2.380'),\n",
        "  Text(-0.24452183750370066, -1.0724780048951186, 'Tb927.4.5730'),\n",
        "  Text(0.23884997938029096, -1.0737554131877682, 'Tb09.v4.0077'),\n",
@@ -673,7 +673,11 @@
     "\"\"\"Surprisingly, only 33,234 reads (11%) resulted in predicted ORFs.\n",
     "we hypothesize that the lack of identified ORFs was due to random sequencing errors rather than any systematic biases in the data, despite PacBio claiming an accuracy of more than 99% for reads with 15-fold coverage\"\"\"\n",
     "\n",
-    "That is a lot of random sequencing errors! But i suppose it could be possible? It matches well up with my number of 11.7775."
+    "That is a lot of random sequencing errors, even if you do a lot of passes! \n",
+    "\n",
+    "The paper also references that these RSE are pretty uniform and around the same place on the VGS's. \n",
+    "\n",
+    "It matches well up with my number of 11.7775."
    ]
   }
  ],
