--- a/lectures/18.09.2023.md
+++ b/lectures/18.09.2023.md
@@ -92,6 +92,115 @@ Cannot do dynamic programming -> too many sequences and lengths
 
 
 
+## Progressive alignments
 
+<p> s1: AAT </p>
+<p> s2: AAC </p>
+<p> s3: AACT </p>
 
-### Blosum62, way of scoring proteins
+<p> Find the best score within the parise score matrix </p>
+<p>  </p>
+<p>  </p>
+<p>     S1 S2 S3 </p>
+<p>     --------- </p>
+<p> S1| -  1   1 </p>
+<p> S2| 1  -   1 </p>
+<p> S3| 1   1  - </p>
+<p>  </p>
+<p> Find most similar pair: AAC- / AACT </p>
+<p>  </p>
+<p> Next find next seq, and align the next seeuqnece to that  </p>
+
+Most similar: seq1/seq 2
+<p> AAC- </p>
+<p> ACCT </p>
+
+add seq 3
+
+<p> AAT- </p>
+<p> or </p>
+<p> AA-T  </p>
+
+<p> OR add seq 4 (AAGCT) </p>
+
+<p> we added a gap because of G in eq 4 </p>
+
+AA-C-
+AA-CT
+
+<p> Lock yourself in at the start </p>
+
+### Distance score, lower is better
+
+<p> Find seq two with lowest distance score ex: (C and D) </p>
+<p> Align them, and add next sequence </p>
+<p> But youre locked in, so if you see a wrongdoing, may be smart to: </p>
+
+Make a sort of tree 
+
+![tree](images/tree.png)
+
+So make sure we get a pretty good one, early.
+
+Do pairwise alignment of the ones with lowest distance, then try to merge them
+
+Align CD and AB sep. using dynamic programming
+
+then reduce CD and AB alignments to consensus sequences to be aligned
+
+![Alt tree2](images/tree2.png)
+
+If in a col, sequences agree, you can shift around
+
+But if you pair stuff wrong
+
+S1 A G
+
+S2 A C
+
+S3 C G
+
+S4 C -
+
+First row is easy since you can move them, but What about the second coloumn??
+
+Score AA to CC
+
+Score how to go from GC to G- ?
+
+We can say that R = A or G
+
+(wiki)["https://en.wikipedia.org/wiki/FASTA_format#Sequence_representation]
+
+so we use this:
+
+S1 A G 
+        
+S2 A C 
+
+= A S
+
+S3 C G
+
+S4 C -
+
+= C [G/C]
+
+So do alignment on
+
+**A S**
+
+**C [G/C]**
+
+Now do pairwise alignment and score them, into a new consuenus sequence
+
+And keep going to align with all other sequences
+
+This is called the **CLASTAWL** Method
+
+### What can go wrong
+
+Depnds on inital pairwise alignment
+
+Gaps introduced early are kept. 
+
