--- a/lectures/16.10.2023.md
+++ b/lectures/16.10.2023.md
@@ -37,7 +37,7 @@ proteomicsDB -> mass spectomtry database
 
 phosphoSitePlus -> see struct.mod for proteins
 
-Protein Data Bank -> databsse with every structure that has been published
+Protein Data Bank -> database with every structure that has been published
 
 Also ALPHAFOLD is sick too 
 
