--- a/assignments/BINF200_assignment_3_1.ipynb
+++ b/assignments/BINF200_assignment_3_1.ipynb
@@ -18,6 +18,11 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "1JbX4QK4nxsy"
       },
@@ -247,7 +252,7 @@
         "\n",
         "Select the largest structure. Select `Structure` under Èxplore in 3D. Using the JSmol viewer, build a 3D representation using the space fill style with the secondary structure indicated in color and attach it to your assignment.\n",
         "\n",
-        "![image.png](coolprotein.png)\n",
+        "![image.png](data3/coolprotein.png)\n",
         "\n",
         "\n",
         "\n",
